se realizo vista de historial de orden y orden dia

--- a/css/style-button.css
+++ b/css/style-button.css
@@ -23,7 +23,12 @@
   .hr{
     width: 200px;
     height: 40px;
-    
-   
   }
 
+  .Tex-label{
+    text-align: right;
+  }
+  
+  .mt3{
+    text-align: center;
+  }
